# karel_the_robot_c_frontend

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
examples/: CMakeLists.txt  helloworld.c  testerror.c  testroom.c
res/: karel.h
res/.idea_clion_dyn_win64/: vcs.xml
res/.idea_clion_static_unix64/: workspace.xml
res/cmake/: cmake_dyn_unixlike64.cmake  cmake_dyn_win64.cmake  cmake_static_unixlike64.cmake  cmake_static_win64.cmake
src/headerFiles/: globals.h  karel_impl.h  pipe.h  tcp_client.h
src/sourceFiles/: globals.c  karel_impl.c  pipe.c  tcp_client.c
tests/: CMakeLists.txt  globals_test.c  pipe_test.c  run_cmocka_tests.c  tcp_client_test.c  tcp_echo_server.c
